--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         background-position: center;
         background-size: cover;
         font-size: x-large;
-        background-image: url("https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/123740332/original/60547d6091e5c71dfb5cf8e0841c7d3d77f89ae2/create-anime-background-style.jpg");
+        background-image: url("https://initiate.alphacoders.com/download/wallpaper/121814/images4/jpg/44917023652116");
       }
 
       #root {
